--- a/MAIN.html
+++ b/MAIN.html
@@ -37,10 +37,11 @@ body, html {
 <body>
 <!-- Navigation (Stays on Top) -->
 <div class="w3-top w3-bar w3-deep-purple">
-  <a href="#home" class="w3-bar-item w3-button">Home</a>
-  <a href="#about" class="w3-bar-item w3-button">About</a>
-  <a href="#hydration" class="w3-bar-item w3-button">Hydration</a>
-  <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+  <a href="#introduction/purpose" class="w3-bar-item w3-button">Introduction/Purpose</a>
+  <a href="#tip of the day" class="w3-bar-item w3-button">Tip of the Day</a>
+  <a href="#wellnesshacks" class="w3-bar-item w3-button">WellnessHacks</a>
+  <a href="#resources" class="w3-bar-item w3-button">Resources</a>
+  <a href="#rocials" class ="w3-bar-item w3-button">Socials</a>
 </div>
 
 <!-- background -->
