Fixed tab links

--- a/RESOURCES.html
+++ b/RESOURCES.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>HealthWealth</title>
+<title>Resources</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
@@ -13,7 +13,7 @@ body, html {
 
 .bg {
   /*The background image */
-  background-image: url("https://i.imgur.com/p3E3vMC.png");
+  background-image: url("");
 
   /*Full height */
   height: 100%;
@@ -38,10 +38,10 @@ body, html {
 <!-- Navigation (Stays on Top) -->
 <div class="w3-top w3-bar w3-deep-purple">
   <a href="INTRODUCTION.html" class="w3-bar-item w3-button">Introduction/Purpose</a>
-  <a href="#tip of the day" class="w3-bar-item w3-button">Tip of the Day</a>
-  <a href="#wellnesshacks" class="w3-bar-item w3-button">WellnessHacks</a>
-  <a href="#resources" class="w3-bar-item w3-button">Resources</a>
-  <a href="#rocials" class ="w3-bar-item w3-button">Socials</a>
+  <a href="TOTD.html" class="w3-bar-item w3-button">Tip of the Day</a>
+  <a href="WH.html" class="w3-bar-item w3-button">WellnessHacks</a>
+  <a href="RESOURCES.html" class="w3-bar-item w3-button">Resources</a>
+  <a href="#SOCIALS.html" class ="w3-bar-item w3-button">Socials</a>
 </div>
 
 <!-- background -->
@@ -59,10 +59,5 @@ body, html {
 <!-- End Content -->
 </div>
 
-<!-- Audio Controls -->
-<audio controls>
-  <source src="song.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
 </body>
 </html>
