--- a/MAIN.html
+++ b/MAIN.html
@@ -38,10 +38,10 @@ body, html {
 <!-- Navigation (Stays on Top) -->
 <div class="w3-top w3-bar w3-deep-purple">
   <a href="INTRODUCTION.html" class="w3-bar-item w3-button">Introduction/Purpose</a>
-  <a href="#tip of the day" class="w3-bar-item w3-button">Tip of the Day</a>
-  <a href="#wellnesshacks" class="w3-bar-item w3-button">WellnessHacks</a>
-  <a href="#resources" class="w3-bar-item w3-button">Resources</a>
-  <a href="#rocials" class ="w3-bar-item w3-button">Socials</a>
+  <a href="TOTD.html" class="w3-bar-item w3-button">Tip of the Day</a>
+  <a href="WH.html" class="w3-bar-item w3-button">WellnessHacks</a>
+  <a href="RESOURCES.html" class="w3-bar-item w3-button">Resources</a>
+  <a href="SOCIALS.html" class ="w3-bar-item w3-button">Socials</a>
 </div>
 
 <!-- background -->
