--- a/WH.html
+++ b/WH.html
@@ -41,7 +41,7 @@ body, html {
   <a href="TOTD.html" class="w3-bar-item w3-button">Tip of the Day</a>
   <a href="WH.html" class="w3-bar-item w3-button">WellnessHacks</a>
   <a href="RESOURCES.html" class="w3-bar-item w3-button">Resources</a>
-  <a href="#SOCIALS.html" class ="w3-bar-item w3-button">Socials</a>
+  <a href="SOCIALS.html" class ="w3-bar-item w3-button">Socials</a>
 </div>
 
 <!-- background -->
