Fixed tab links

--- a/INTRODUCTION.html
+++ b/INTRODUCTION.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>HealthWealth</title>
+<title>Introduction</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
@@ -13,7 +13,7 @@ body, html {
 
 .bg {
   /*The background image */
-  background-image: url("https://i.imgur.com/p3E3vMC.png");
+  background-image: url("");
 
   /*Full height */
   height: 100%;
@@ -59,10 +59,5 @@ body, html {
 <!-- End Content -->
 </div>
 
-<!-- Audio Controls -->
-<audio controls>
-  <source src="song.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
 </body>
 </html>
