--- a/MAIN.html
+++ b/MAIN.html
@@ -46,7 +46,14 @@ body, html {
 </div>
 
 <!-- background -->
-<div class ="bg"></div>
+<div class ="bg">
+  <div style="padding-top:40px;">
+  <!-- Audio Controls -->
+  <audio controls>
+    <source src="song.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+  </audio></div>
+</div>
 
 <!-- Start Content -->
 <div id="home" class="w3-content">
@@ -55,15 +62,10 @@ body, html {
 <div class="footer">
  <p>
  Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
- </p>
+</p></div>
 
 <!-- End Content -->
 </div>
 
-<!-- Audio Controls -->
-<audio controls>
-  <source src="song.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
 </body>
 </html>
