--- a/INTRODUCTION.html
+++ b/INTRODUCTION.html
@@ -13,7 +13,7 @@ body, html {
 
 .bg {
   /*The background image */
-  background-image: url("");
+  background-image: url("Media/bg.png");
 
   /*Full height */
   height: 100%;
@@ -46,13 +46,10 @@ body, html {
 </div>
 
 <!-- background -->
-<div class ="bg"></div>
-
-  <p>
-  this is a mental health website designed to help you cure any stresses you have in your daily life. I hope you find this website interesting to come and check out as a way to relieve
-  your stress. Please share it amongst your friends if they are under a lot of pressure.
-  </p> 
-
+<div class="bg">
+  <img src="Media/bunny-cute.gif" class="w3-round" alt="Chick">
+  <img src="Media/fab.png" class="w3-round" alt="Fab">
+</div>
 
 <!-- Start Content -->
 <div id="home" class="w3-content">
