--- a/MAIN.html
+++ b/MAIN.html
@@ -46,11 +46,11 @@ body, html {
 </div>
 
 <!-- background -->
-<div class ="bg">
+<div class="bg">
   <div style="padding-top:40px;">
   <!-- Audio Controls -->
   <audio controls>
-    <source src="song.mp3" type="audio/mpeg">
+    <source src="Media/song.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
   </audio></div>
 </div>
