--- a/RESOURCES.html
+++ b/RESOURCES.html
@@ -13,7 +13,7 @@ body, html {
 
 .bg {
   /*The background image */
-  background-image: url("");
+  background-image: url("Media/bg.png");
 
   /*Full height */
   height: 100%;
@@ -46,7 +46,7 @@ body, html {
 </div>
 
 <!-- background -->
-<div class ="bg"></div>
+<div class="bg"></div>
 
 <!-- Start Content -->
 <div id="home" class="w3-content">
