fixed bunny placement

--- a/INTRODUCTION.html
+++ b/INTRODUCTION.html
@@ -47,8 +47,8 @@ body, html {
 
 <!-- background -->
 <div class="bg">
-  <img src="Media/bunny-cute.gif" class="w3-round" alt="Chick">
-  <img src="Media/fab.png" class="w3-round" alt="Fab">
+  <img src="Media/bunny-cute.gif" class="w3-round" alt="Chick" style="margin: 50px 0px 0px 0px;">
+  <img src="Media/fab.png" class="w3-round" alt="Fab" style="margin: -235px 0px 0px -85px;">
 </div>
 
 <!-- Start Content -->
