Intro/Purpose + TotD page done

--- a/INTRODUCTION.html
+++ b/INTRODUCTION.html
@@ -32,6 +32,7 @@ body, html {
   background-color: #673AB7;
   color: white;
   text-align: center;
+  font-size: 15px;
 }
 </style>
 <body>
@@ -47,8 +48,18 @@ body, html {
 
 <!-- background -->
 <div class="bg">
-  <img src="Media/bunny-cute.gif" class="w3-round" alt="Chick" style="margin: 50px 0px 0px 0px;">
-  <img src="Media/fab.png" class="w3-round" alt="Fab" style="margin: -235px 0px 0px -85px;">
+  <div class="w3-container w3-large ">
+  <div class="w3-left-align">
+  <pre style = "font-family:Garamond, serif;font-size:24px;color:DarkSlateGray;padding-top:40px">
+  Hello! We're a team of 4 that made this website for a hackathon; specifically HackViolet.
+
+  We developed this website because we felt there was a need to remind people all around
+  the world that they matter. The pandemic has surely made everything worse for people,
+  but we hope that your days continue to shine and your smile still shows. Self-care!
+  </pre>
+  <img src="Media/bunny-cute.gif" class="w3-round" alt="Chick" style="margin: -50px 0px 0px 60px;">
+  <img src="Media/fab.png" class="w3-round" alt="Fab" style="margin: -235px 0px 0px -70px;">
+  <img src="Media/carlton.gif" class="w3-opacity" alt="Carlton" style="margin: -300px 0px 0px 295px">
 </div>
 
 <!-- Start Content -->
@@ -62,6 +73,5 @@ body, html {
 
 <!-- End Content -->
 </div>
-
 </body>
 </html>
