--- a/TOTD.html
+++ b/TOTD.html
@@ -46,7 +46,12 @@ body, html {
 </div>
 
 <!-- background -->
-<div class="bg"></div>
+<div class="bg">
+  <div id="widgetmain" style="padding-top: 50px; padding-left: 475qpx;text-align:left;overflow-y:auto;overflow-x:hidden;width:1500px;background-color:#transparent;">
+    <div id="rsswidget" style="height:600px;">
+      <iframe src="http://us1.rssfeedwidget.com/getrss.php?time=1612053790117&amp;x=https%3A%2F%2Fapi.adviceslip.com%2Fdaily_adviceslip.rss&amp;w=600&amp;h=600&amp;bc=333333&amp;bw=1&amp;bgc=transparent&amp;m=20&amp;it=true&amp;t=Tip of the Day!&amp;tc=333333&amp;ts=15&amp;tb=transparent&amp;il=false&amp;lc=0000FF&amp;ls=14&amp;lb=false&amp;id=true&amp;dc=333333&amp;ds=14&amp;idt=true&amp;dtc=284F2D&amp;dts=12" border="0" hspace="0" vspace="0" frameborder="no" marginwidth="0" marginheight="0" style="border:0; padding:0; margin:0; width:600px; height:600px;" id="rssOutput">
+        Reading RSS Feed ...</iframe></div><div style="text-align:right;margin-bottom:0;" id="widgetbottom"></div></div>
+</div>
 
 <!-- Start Content -->
 <div id="home" class="w3-content">
