--- a/SOCIALS.html
+++ b/SOCIALS.html
@@ -4,6 +4,7 @@
 <title>Socials</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
 <style>
 body, html {
@@ -46,13 +47,34 @@ body, html {
 </div>
 
 <!-- background -->
-<div class="bg"></div>
+<div class="bg">
+
+  <!-- Team Message -->
+  <section class="w3-container w3-center w3-content" style="max-width:600px; padding-top: 50px">
+    <h2 class="w3-wide">THE TEAM</h2>
+    <p class="w3-opacity"><i>We hope you are all well!</i></p>
+  </section>
+
+  <!-- Team Pics -->
+  <section style="padding-left: 45px">
+    <img class="mySlides" src="Media/placeholder.png"
+    style="width:24%; height: 75%">
+    <img class="mySlides" src="Media/placeholder.png"
+    style="width:24%; height: 75%">
+    <img class="mySlides" src="Media/placeholder.png"
+    style="width:24%; height: 75%">
+    <img class="mySlides" src="Media/placeholder.png"
+    style="width:24%; height: 75%">
+  </section>
+</div>
 
 <!-- Start Content -->
 <div id="home" class="w3-content">
 
 <!-- Footer -->
-<div class="footer">
+<div class="footer w3-large">
+   <a href="https://twitter.com/kanerusoju"><i class="fa fa-twitter"></i></a>
+   <a href="https://linkedin.com/in/daniel-klemens"><i class="fa fa-linkedin"></i></a>
  <p>
  Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
  </p>
