--- a/MAIN.html
+++ b/MAIN.html
@@ -4,68 +4,34 @@
 <title>HealthWealth</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
-<style>
-body, html {
-  height: 100%;
-  margin: 0;
-}
 
-.bg {
-  /*The background image */
-  background-image: url("https://i.imgur.com/p3E3vMC.png");
-
-  /*Full height */
-  height: 100%;
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: #673AB7;
-  color: white;
-  text-align: center;
-}
-</style>
 <body>
 <!-- Navigation (Stays on Top) -->
 <div class="w3-top w3-bar w3-deep-purple">
   <a href="MAIN.html" class="w3-bar-item w3-button">Home</a>
-  <a href="INTRODUCTION.html" class="w3-bar-item w3-button">Introduction/Purpose</a>
-  <a href="TOTD.html" class="w3-bar-item w3-button">Tip of the Day</a>
-  <a href="WH.html" class="w3-bar-item w3-button">WellnessHacks</a>
+  <a href="INTRODUCTION.html" class="w3-bar-item w3-button">Purpose</a>
+  <a href="WH.html" class="w3-bar-item w3-button">Wellness Hacks</a>
   <a href="RESOURCES.html" class="w3-bar-item w3-button">Resources</a>
   <a href="SOCIALS.html" class="w3-bar-item w3-button">Socials</a>
 </div>
 
-<!-- background -->
-<div class="bg">
-  <div style="padding-top:40px;">
-  <!-- Audio Controls -->
-  <audio controls>
-    <source src="Media/song.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-  </audio></div>
-</div>
-
-<!-- Start Content -->
-<div id="home" class="w3-content">
+<!-- Background -->
+<section>
+  <img src ="media/MAIN.png" style="width:100%">
+</section>
 
 <!-- Footer -->
-<div class="footer">
+<footer class="w3-container w3-padding-32 w3-center w3-deep-purple w3-xlarge">
+ <a href="https://twitter.com/kanerusoju"><i class="fa fa-twitter w3-hover-text-green"></i></a>
  <p>
- Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
-</p></div>
-
-<!-- End Content -->
-</div>
+ <p class="w3-medium">
+ Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a>
+ </p>
+ <p class="w3-medium">
+ Developed and Designed by <a href="https://linktr.ee/kaneru" target="_blank" class="w3-hover-text-green">Daniel Klemens</a></p>
+</footer>
 
 </body>
 </html>
