--- a/RESOURCES.html
+++ b/RESOURCES.html
@@ -4,61 +4,55 @@
 <title>Resources</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
 <style>
-body, html {
-  height: 100%;
-  margin: 0;
-}
-
-.bg {
-  /*The background image */
-  background-image: url("Media/bg.png");
-
-  /*Full height */
-  height: 100%;
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: #673AB7;
-  color: white;
-  text-align: center;
+.menu {
+  display: none;
 }
 </style>
+
 <body>
 <!-- Navigation (Stays on Top) -->
 <div class="w3-top w3-bar w3-deep-purple">
   <a href="MAIN.html" class="w3-bar-item w3-button">Home</a>
-  <a href="INTRODUCTION.html" class="w3-bar-item w3-button">Introduction/Purpose</a>
-  <a href="TOTD.html" class="w3-bar-item w3-button">Tip of the Day</a>
-  <a href="WH.html" class="w3-bar-item w3-button">WellnessHacks</a>
+  <a href="INTRODUCTION.html" class="w3-bar-item w3-button">Purpose</a>
+  <a href="WH.html" class="w3-bar-item w3-button">Wellness Hacks</a>
   <a href="RESOURCES.html" class="w3-bar-item w3-button">Resources</a>
   <a href="SOCIALS.html" class="w3-bar-item w3-button">Socials</a>
 </div>
 
-<!-- background -->
-<div class="bg"></div>
+<div class="w3-sand w3-grayscale-min w3-large">
 
-<!-- Start Content -->
-<div id="home" class="w3-content">
-
-<!-- Footer -->
-<div class="footer">
- <p>
- Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
- </p>
-
-<!-- End Content -->
+<!-- Resources Container -->
+<div class="w3-container" id="help">
+  <div class="w3-content" style="max-width:700px">
+    <h5 class="w3-center w3-padding-64"><span class="w3-card w3-padding w3-wide">WHERE TO GET HELP</span></h5>
+    <div class="w3-panel w3-leftbar w3-khaki">
+      <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;"><i>“I've never been good with asking for help; it seems risky, but at some point when things are really dicey, your stubbornness gives way to a certain form of humility that, after you get over yourself, feels liberating. I started to believe that the universe was conspiring to help me finish my house, sending people along at the right moment.”</i></p>
+<p style="font-family:Garamond, serif; color:DarkSlateGray;">Dee Williams</p>
+    </div>
+    <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;"><strong>Hotlines (Global): </strong><a href="https://www.reddit.com/r/SuicideWatch/wiki/hotlines" title="HOTLINES" target="_blank" class="w3-hover-text-green">Crisis/Suicide Hotlines</a></p>
+    <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;"><strong>U.S. General Resources: </strong>The number 211 is available (not nationwide) to provide access to essential community resources. There is also a link at <a href="https://navigateresources.net/211CommunityResources/" title="211" target="_blank" class="w3-hover-text-green">United Way 211 Community Resource Directory</a></p>
+    <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;"><strong>U.S. LGBT+ Community: </strong>You are valid and you exist. <a href="https://www.thetrevorproject.org/" title="TTP" target="_blank" class="w3-hover-text-green">The Trevor Project</a> is a great resource when in need of help.</p>
+    <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;"><strong>U.S. Community Resources: </strong>Another search directory that can be used when looking for resources, <a href="https://www.1degree.org/" title="1D" target="_blank" class="w3-hover-text-green">1Degree</a></p>
+    <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;"><strong>Students: </strong>More often than not, there are services available at school for free to help you when you are in need. Please do reach out.</p>
+    <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;"><strong>Free Self-Care Resources: </strong>Being in touch with your body and mind can be hard, but here's some free resources... <a href="https://myintent.org/pages/free" title="SELFCARE" target="_blank" class="w3-hover-text-green">MyIntent</a></p>
+    <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;"><strong>Social Resources: </strong>Communicate with those around you, find friends, and more (caution: don't forget about covid-19!)... <a href="https://meetup.com" title="MEETUP" target="_blank" class="w3-hover-text-green">MeetUp</a> and <a href="https://craigslist.org" title="CL" target="_blank" class="w3-hover-text-green">Craigslist</a></p>
+  </div>
 </div>
+
+</div>
+<!-- Footer -->
+<footer class="w3-container w3-padding-32 w3-center w3-deep-purple w3-xlarge">
+ <a href="https://twitter.com/kanerusoju"><i class="fa fa-twitter w3-hover-text-green"></i></a>
+ <p>
+ <p class="w3-medium">
+ Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a>
+ </p>
+ <p class="w3-medium">
+ Developed and Designed by <a href="https://linktr.ee/kaneru" target="_blank" class="w3-hover-text-green">Daniel Klemens</a></p>
+</footer>
 
 </body>
 </html>
