--- a/SOCIALS.html
+++ b/SOCIALS.html
@@ -6,81 +6,64 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
-<style>
-body, html {
-  height: 100%;
-  margin: 0;
-}
 
-.bg {
-  /*The background image */
-  background-image: url("Media/bg.png");
-
-  /*Full height */
-  height: 100%;
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: #673AB7;
-  color: white;
-  text-align: center;
-}
-</style>
 <body>
 <!-- Navigation (Stays on Top) -->
 <div class="w3-top w3-bar w3-deep-purple">
   <a href="MAIN.html" class="w3-bar-item w3-button">Home</a>
-  <a href="INTRODUCTION.html" class="w3-bar-item w3-button">Introduction/Purpose</a>
-  <a href="TOTD.html" class="w3-bar-item w3-button">Tip of the Day</a>
-  <a href="WH.html" class="w3-bar-item w3-button">WellnessHacks</a>
+  <a href="INTRODUCTION.html" class="w3-bar-item w3-button">Purpose</a>
+  <a href="WH.html" class="w3-bar-item w3-button">Wellness Hacks</a>
   <a href="RESOURCES.html" class="w3-bar-item w3-button">Resources</a>
   <a href="SOCIALS.html" class="w3-bar-item w3-button">Socials</a>
 </div>
 
-<!-- background -->
-<div class="bg">
+<div class="w3-sand w3-grayscale-min w3-large">
 
-  <!-- Team Message -->
-  <section class="w3-container w3-center w3-content" style="max-width:600px; padding-top: 50px">
-    <h2 class="w3-wide">THE TEAM</h2>
-    <p class="w3-opacity"><i>We hope you are all well!</i></p>
-  </section>
+<!-- Team Message -->
+<section class="w3-container w3-center w3-content" style="max-width:600px;">
+  <h5 class="w3-center w3-padding-48"><span class="w3-card w3-padding w3-wide">THE TEAM</span></h5>
+  <p class="w3-opacity-min" style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Feel free to reach out!</p>
+</section>
 
-  <!-- Team Pics -->
-  <section style="padding-left: 45px">
-    <img class="mySlides" src="Media/placeholder.png"
-    style="width:24%; height: 75%">
-    <img class="mySlides" src="Media/placeholder.png"
-    style="width:24%; height: 75%">
-    <img class="mySlides" src="Media/placeholder.png"
-    style="width:24%; height: 75%">
-    <img class="mySlides" src="Media/placeholder.png"
-    style="width:24%; height: 75%">
-  </section>
+<!-- Team Members -->
+<section class="w3-row-padding w3-center w3-khaki">
+  <article class="w3-third">
+    <p>Daniel Klemens</p>
+    <img src="media/dk_pic.jpg" alt="Daniel" style="width:25%">
+    <p>Daniel was the web developer and web designer.</p>
+    <p>Contact @: <br>(703)-609-1901<br> kaneru#7341<br> <a href="https://linktr.ee/kaneru" title="linktree" target="_blank" class="w3-hover-text-green">Linktree</a></p>
+  </article>
+  <article class="w3-third">
+    <p>George Tian</p>
+    <img src="media/carlton.gif" alt="George" style="width:50%">
+    <p>N/A</p>
+    <p>Contact @: <br>(xxx)-xxx-xxx</p>
+  </article>
+  <article class="w3-third">
+    <p>Meghna Banerjee</p>
+    <img src="media/carlton.gif" alt="Meghna" style="width:50%">
+    <p>Came up with our project idea.</p>
+    <p>Contact @: <br>(xxx)-xxx-xxx</p>
+  </article>
+  <article class="w3-third">
+    <p>Sophia Campana</p>
+    <img src="media/carlton.gif" alt="Sophia" style="width:50%">
+    <p>Hosted the website.</p>
+    <p>Contact @: <br>(xxx)-xxx-xxx</p>
+  </article>
+</section>
+
 </div>
-
-<!-- Start Content -->
-<div id="home" class="w3-content">
-
 <!-- Footer -->
-<div class="footer w3-large">
-   <a href="https://twitter.com/kanerusoju"><i class="fa fa-twitter"></i></a>
-   <a href="https://linkedin.com/in/daniel-klemens"><i class="fa fa-linkedin"></i></a>
+<footer class="w3-container w3-padding-32 w3-center w3-deep-purple w3-xlarge">
+ <a href="https://twitter.com/kanerusoju"><i class="fa fa-twitter w3-hover-text-green"></i></a>
  <p>
- Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+ <p class="w3-medium">
+ Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a>
  </p>
-
-<!-- End Content -->
-</div>
+ <p class="w3-medium">
+ Developed and Designed by <a href="https://linktr.ee/kaneru" target="_blank" class="w3-hover-text-green">Daniel Klemens</a></p>
+</footer>
 
 </body>
 </html>
