--- a/INTRODUCTION.html
+++ b/INTRODUCTION.html
@@ -9,7 +9,7 @@
 
 <!-- Navigation (Stays on Top) -->
 <div class="w3-top w3-bar w3-deep-purple">
-  <a href="MAIN.html" class="w3-bar-item w3-button">Home</a>
+  <a href="index.html" class="w3-bar-item w3-button">Home</a>
   <a href="INTRODUCTION.html" class="w3-bar-item w3-button">Purpose</a>
   <a href="WH.html" class="w3-bar-item w3-button">Wellness Hacks</a>
   <a href="RESOURCES.html" class="w3-bar-item w3-button">Resources</a>
