--- a/INTRODUCTION.html
+++ b/INTRODUCTION.html
@@ -37,7 +37,7 @@
   </div>
   <p class="w3-justify" style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Hello, we're a team of 4 that made this website for a hackathon; specifically HackViolet.
 
-  We developed this website because we felt there was a need to remind people all around the world that they matter. The pandemic has surely made everything worse for people, but we hope that your days continue to shine and your smile still shows. Self-care!</p>
+  We chose to this path because we felt there was a need to remind people all around the world that they matter. The pandemic has surely made everything worse for people, but we hope that your days continue to shine and your smile still shows. Go Self-care!</p>
 </section>
 </div>
 <!-- Footer -->
