--- a/SOCIALS.html
+++ b/SOCIALS.html
@@ -31,25 +31,24 @@
     <p>Daniel Klemens</p>
     <img src="media/dk_pic.jpg" alt="Daniel" style="width:25%">
     <p>Daniel was the web developer and web designer.</p>
-    <p>Contact @: <br>(703)-609-1901<br> kaneru#7341<br> <a href="https://linktr.ee/kaneru" title="linktree" target="_blank" class="w3-hover-text-green">Linktree</a></p>
+    <p>Contact @: <br>(703)609-1901<br> kaneru#7341<br> danielck@vt.edu<br> <a href="https://linktr.ee/kaneru" title="linktree" target="_blank" class="w3-hover-text-green">Linktree</a></p>
   </article>
   <article class="w3-third">
-    <p>George Tian</p>
+    <p>George Qian</p>
     <img src="media/carlton.gif" alt="George" style="width:50%">
-    <p>N/A</p>
-    <p>Contact @: <br>(xxx)-xxx-xxx</p>
+    <p>Contact @: <br>(917)402-6927<br> george19@vt.edu</p>
   </article>
   <article class="w3-third">
     <p>Meghna Banerjee</p>
-    <img src="media/carlton.gif" alt="Meghna" style="width:50%">
+    <img src="media/mb_pic.jpg" alt="Meghna" style="width:32%">
     <p>Came up with our project idea.</p>
-    <p>Contact @: <br>(xxx)-xxx-xxx</p>
+    <p>Contact @: <br>(703)314-0742<br> bmeghna@vt.edu</p>
   </article>
   <article class="w3-third">
     <p>Sophia Campana</p>
-    <img src="media/carlton.gif" alt="Sophia" style="width:50%">
-    <p>Hosted the website.</p>
-    <p>Contact @: <br>(xxx)-xxx-xxx</p>
+    <img src="media/sc_pic.png" alt="Sophia" style="width:35%">
+    <p></p>
+    <p>Contact @: <br>(240)750-4320<br> sophiamc@vt.edu<br> linkedin.com/in/campsoph</p>
   </article>
 </section>
 
