added Sophia bio

--- a/SOCIALS.html
+++ b/SOCIALS.html
@@ -47,7 +47,7 @@
   <article class="w3-third">
     <p>Sophia Campana</p>
     <img src="media/sc_pic.png" alt="Sophia" style="width:35%">
-    <p></p>
+    <p>Sophia was the project coordinator.</p>
     <p>Contact @: <br>(240)750-4320<br> sophiamc@vt.edu<br> linkedin.com/in/campsoph</p>
   </article>
 </section>
