--- a/SOCIALS.html
+++ b/SOCIALS.html
@@ -41,7 +41,7 @@
   <article class="w3-third">
     <p>Meghna Banerjee</p>
     <img src="media/mb_pic.jpg" alt="Meghna" style="width:32%">
-    <p>Meghna came up with our project idea and created our.</p>
+    <p>Meghna came up with our project idea.</p>
     <p>Contact @: <br>(703)314-0742<br> bmeghna@vt.edu</p>
   </article>
   <article class="w3-third">
