--- a/SOCIALS.html
+++ b/SOCIALS.html
@@ -13,6 +13,7 @@
   <a href="index.html" class="w3-bar-item w3-button">Home</a>
   <a href="INTRODUCTION.html" class="w3-bar-item w3-button">Purpose</a>
   <a href="WH.html" class="w3-bar-item w3-button">Wellness Hacks</a>
+  <a href="AFFIRMATIONS.html" class="w3-bar-item w3-button">Affirmations</a>
   <a href="RESOURCES.html" class="w3-bar-item w3-button">Resources</a>
   <a href="SOCIALS.html" class="w3-bar-item w3-button">Socials</a>
 </div>
