--- a/WH.html
+++ b/WH.html
@@ -17,6 +17,7 @@
 <div class="w3-top w3-bar w3-deep-purple">
   <a href="index.html" class="w3-bar-item w3-button">Home</a>
   <a href="INTRODUCTION.html" class="w3-bar-item w3-button">Purpose</a>
+  <a href="TOTD.html" class="w3-bar-item w3-button">Tip of the Day</a>
   <a href="WH.html" class="w3-bar-item w3-button">Wellness Hacks</a>
   <a href="AFFIRMATIONS.html" class="w3-bar-item w3-button">Affirmations</a>
   <a href="RESOURCES.html" class="w3-bar-item w3-button">Resources</a>
